<resources>
    <string name="app_name">Projet HOTELS</string>
    <string name="nom">Le Nom</string>
    <string name="login2">Login</string>
    <string name="connercter">Connercter</string>
    <string name="annuler">Annuler</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">S\'incrire</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="creecompte">Crée un Compte</string>
    <string name="information_sur_utulisateur">Information sur utilisateur</string>
    <string name="pr_nom">prénom</string>
    <string name="Nom">nom</string>
    <string name="prenom">prénom</string>
    <string name="date_naissance">Date de naissance</string>
    <string name="mail">Email</string>
    <string name="femmme">FEMME</string>
    <string name="homme">HOMME</string>
    <string name="valider">Valider</string>
    <string name="bienvenue_dans_notre_app">Bienvenue dans notre app</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="succes">Succes</string>
    <string name="s_incrire_maintenant">s\'incrire maintenant</string>
    <string name="cr_e_un_compte">Crée un Compte</string>
    <string name="confirmer_mot_de_pass">Confirmer Mot de Pass</string>
    <string name="mot_de_pass">Mot de Pass</string>
    <string name="vous_avez_d_ja_un_compte_login_ici">Vous avez déja un compte ?</string>
    <string name="check_in">Check IN</string>
    <string name="check_out">Check out</string>
    <string name="place">Place</string>
    <string name="rechercher">Rechercher</string>
    <string name="r_server_maintenant">Réserver maintenant</string>
    <string name="aouter_un_hotel">Ajouter un Hotel</string>
    <string name="nombre_d_etoile">Nombre d\'etoile</string>
    <string name="l_address">L\'address</string>
    <string name="le_nom_de_l_hotel">Le Nom de l\'hotel</string>
    <string name="empty_Strings" />
    <string name="vide_strings" />
    <string name="ajouter_chambre_pour_votre_hotel">Ajouter CHAMBRE pour Votre hotel</string>
    <string name="id_chambre">ID chambre</string>
    <string name="type_de_chambre">Type de chambre</string>
    <string name="prix_de_chambre_par_nuit">prix de chambre par nuit</string>
    <string name="account">Account</string>
    <string name="reservation">Reservation</string>
    <string name="accueil">accueil</string>
    <string name="rooms">Rooms</string>
    <string name="dashboard">Dashboard</string>
    <string name="ajouter_hotel">Ajouter Hotel</string>
    <string name="information_sur_le_compte">Information sur le Compte</string>
    <string name="ajouter_un_chambre">Ajouter Un Chambre</string>
    <string name="status_hotel">status hotel</string>
    <string name="reserver">Reserver</string>
    <string name="choisit_la_p_riode_de_reservation">Choisit La période de reservation</string>
    <string name="localisation">Localisation</string>
    <string name="liste_des_hotels">Liste des Hotels</string>
    <string name="nombre_totale_des_clients">Nombre Totale Des Clients:</string>
    <string name="nombre_toral_des_chambres">Nombre Total des Chambres:</string>
    <string name="nombre_total_des_hotels">Nombre Total des Hotels Actifs:</string>
    <string name="Localisation_hotel">Localisation hotel</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="vos_reservation">Vos Reservation</string>
    <string name="API_MAP">AIzaSyBN7lEIzYzXNXcYeztbMNALs6NouSazNlg</string>
    <string name="votre_compte">Votre Compte</string>
    <string name="modifer_les_information">modifer les information</string>
    <string name="modifier_mot_de_pass">Modifier Mot de pass</string>
    <string name="profile">Profile</string>
    <string name="nouveau_mot_pass">Nouveau Mot Pass</string>
    <string name="new_email">New Email</string>
    <string name="nouveau_email">Nouveau Email</string>
    <string name="nouveau_pr_nom">Nouveau Prénom</string>
    <string name="reserver_mainteant">Reserver mainteant</string>
    <string name="rechercher_l_hotel">Rechercher l\'hotel</string>
    <string name="prix_max_pour_la_nuit">Prix max Pour une nuit</string>
    <string name="_0000">0000</string>
    <string name="_0">0</string>
    <string name="rechrecher">rechrecher</string>
    <string name="rechercher_avancer">Rechercher Avancer</string>
    <string name="les_besoins">Les besoins</string>
    <string name="jusqu_a">Jusqu\'a</string>
    <string name="datetpye">--/--/----</string>
    <string name="caract_ristiques_de_l_h_tel">Caractéristiques de l\'hôtel</string>
    <string name="latitude">Latitude</string>
    <string name="n_t_l_phone">N°Téléphone</string>
    <string name="hotale_RATING">HOTEL RATING</string>
    <string name="favoris">favoris</string>
    <string name="les_hotels">Les hotels</string>
    <string name="les_commentaires">Les Commentaires</string>
    <string name="trash">Supprimer</string>
    <string name="pr_nom_de_responsable">Prénom de Responsable</string>
    <string name="nom_de_responsable">Nom de Responsable</string>
    <string name="il_n_y_a_pas_de_nouvel_h_tel">il n\'y a pas de nouvel hôtel</string>
    <string name="d_connecter">déconnecter</string>
</resources>