<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item

        android:id="@+id/add_hotel"
        android:title="@string/les_hotels"
        android:icon="@drawable/ic_hotel"
        app:showAsAction="ifRoom"
        android:enabled="true"/>
    <item

        android:enabled="true"
        android:id="@+id/dashboard_admin"
        android:title="@string/les_commentaires"
        android:icon="@drawable/ic_baseline_comment_24"
        app:showAsAction="ifRoom"/>
    <item
        android:enabled="true"
        android:id="@+id/profile_admin"
        app:showAsAction="ifRoom"
        android:title="@string/account"
        android:icon="@drawable/ic_account_circle"/>
</menu>