<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D69F9F"
    tools:context=".CreeUser">

    <EditText
        android:id="@+id/mail"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Info_utu"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="313dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="209dp"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/nom"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Info_utu"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="47dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="479dp"
        android:backgroundTint="#2196F3"
        android:ems="10"
        android:hint="@string/Nom"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/prenom"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Info_utu"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="394dp"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/pr_nom"
        android:inputType="textPersonName"
        android:rotationX="-8"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/Info_utu"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="casual"
        android:lineSpacingExtra="0sp"
        android:text="@string/information_sur_utulisateur"
        android:textAlignment="center"
        android:textColor="#770D0D"
        android:textColorLink="#732424"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/mail"
        android:layout_alignBottom="@+id/prenom"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="-84dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="-99dp"
        android:ems="10"
        android:hint="@string/date_naissance"
        android:inputType="date" />

</RelativeLayout>